--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3"
+    "vite": "^3.2.11"
   }
 }
