--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.1.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@remixicon/react": "^4.2.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
